[package]
name = "octopusmq"
version = "0.1.0"
authors = ["Paul Vakhnivskyi <pvakhnivskyi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mac_address = "1.1"
flate2 = "1.0"
bzip2 = "0.4"
zstd = "0.9"
brotli = "3.3"
sha2 = "0.9"
blake2 = "0.9"
whirlpool = "0.9"
ripemd256 = "0.1"
ripemd320 = "0.9"
digest = "0.9"
generic-array = "0.14"
curve25519-dalek = "3.2"
ed25519-dalek = "1.0"
uuid = { version = "0.8", features = ["v1", "v3", "v4"] }